# api/server.js
@@ -8,6 +8,7 @@ const app = express();
 const port = 3000;
 
 // importa as rotas
+const equipe6Routes = require('./routes/equipe6Routes')
 const userRoutes = require('./routes/userRoutes')
 const baseRoutes = require('./routes/baseRoutes')
 
@@ -16,6 +17,7 @@ app.use(express.json());
 app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 app.use('/', baseRoutes);
 app.use('/users', userRoutes);
+app.use('/equipe6', equipe6Routes);
 
 
 app.listen(port, () => {
